# ImageProcessingServer

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml
config/: config.json
docs/: API.md  FEATURES.md  ROADMAP.md
scripts/: smoke-test.sh
src/: main.cpp  version.h
src/controllers/: HealthController.cc  HealthController.h  MetricsController.cc  MetricsController.h  ProcessController.cc  ProcessController.h
src/core/: Config.cc  Config.h  ImageProcessor.cc  ImageProcessor.h  JobQueue.cc  JobQueue.h  Metrics.cc  Metrics.h  ProcessOptions.cc  ProcessOptions.h  RateLimiter.cc  RateLimiter.h  RequestUtil.h
src/filters/: ApiKeyFilter.cc  ApiKeyFilter.h  RateLimitFilter.cc  RateLimitFilter.h
